# swagger.json
@@ -5,10 +5,10 @@
     "description": "Vehicles API",
     "version": "1.0.0"
   },
-  "host": "cse341-project-2-g6df.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/": {
@@ -21,6 +21,26 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/login": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
@@ -54,7 +74,6 @@
           {
             "name": "body",
             "in": "body",
-            "description": "User object that needs to be added to the database",
             "schema": {
               "type": "object",
               "properties": {
@@ -77,6 +96,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "412": {
             "description": "Precondition Failed"
@@ -102,7 +124,6 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "description": "The ID of the user to return",
             "type": "string"
           }
         ],
@@ -126,13 +147,11 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "description": "The ID of the user to update",
             "type": "string"
           },
           {
             "name": "body",
             "in": "body",
-            "description": "User object that needs to be added to the database",
             "schema": {
               "type": "object",
               "properties": {
@@ -159,6 +178,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "412": {
             "description": "Precondition Failed"
           },
@@ -178,7 +200,6 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "description": "The ID of the user to delete",
             "type": "string"
           }
         ],
@@ -188,6 +209,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -224,7 +248,6 @@
           {
             "name": "body",
             "in": "body",
-            "description": "Vehicle object that needs to be added to the database",
             "schema": {
               "type": "object",
               "properties": {
@@ -256,6 +279,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "412": {
             "description": "Precondition Failed"
@@ -281,7 +307,6 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "description": "The ID of the vehicle to return",
             "type": "string"
           }
         ],
@@ -305,13 +330,11 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "description": "The ID of the vehicle to update",
             "type": "string"
           },
           {
             "name": "body",
             "in": "body",
-            "description": "Vehicle object that needs to be added to the database",
             "schema": {
               "type": "object",
               "properties": {
@@ -347,6 +370,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "412": {
             "description": "Precondition Failed"
           },
@@ -366,7 +392,6 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "description": "The ID of the vehicle to delete",
             "type": "string"
           }
         ],
@@ -376,6 +401,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
